# image-rev

./: README.md  install.sh
config/: image.conf
config/.default/: image.conf
examples/revs/REV-sphere-example_rm=center_rs=1/: REV_analysis.csv  REV_analysis_info.txt
src/: CMakeLists.txt  imagerev_config.h.in  main.cpp
src/ImageREV/: CMakeLists.txt  ImageFileParser.h  ImageREV.cxx  ImageREV.h  ImageREVAnalyzer.h  ImageREVApp.h  ImageREVExtractor.h  ImageREVHeader.h  ImageREVInput.h  mRNG.h
src/python/: rev-visualizer.py
src/python/datavis/: rev-visualizer.py  visualize_REV_analysis.py  visualize_multiple_REV_analysis.py
