add_library(ImageREV ImageREV.cxx)
target_include_directories(ImageREV INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_features(ImageREV PUBLIC cxx_std_11)
install(TARGETS ImageREV DESTINATION lib)
install(FILES ImageREV.h ImageREVInput.h ImageFileParser.h mRNG.h ImageREVHeader.h ImageREVApp.h DESTINATION include)
